--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -926,6 +926,22 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Jermenski, Hemšinski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Homshetsi_dialect" target="_blank">Armenian, Homshetsi dialect</a></td>
+        <td>Bidzig Pirens</td>
+        <td class="image"><a href="naslovna/jermenskohemsinski.jpg" target="_blank"><img src="naslovna_th/jermenskohemsinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/jermenskohemsinski.jpg" target="_blank"><img src="prva_th/jermenskohemsinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Jermenski, Zapadnojermenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Western_Armenian" target="_blank">Western Armenian language</a></td>
+        <td>Փոքրիկ իշխանը</td>
+        <td class="image"><a href="naslovna/jermenskizapadni.jpg" target="_blank"><img src="naslovna_th/jermenskizapadni.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/jermenskizapadni.jpg" target="_blank"><img src="prva_th/jermenskizapadni.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kabardinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kabardian_language" target="_blank">Kabardian language</a></td>
         <td>Пщы Нэнау</td>
