--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1654,6 +1654,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turski jezik na staroturkijskom pismu</td>
+        <td><a href="https://en.wikipedia.org/wiki/Old_Turkic_script" target="_blank">Old Turkic script</a></td>
+        <td>𐰚𐰇𐰲𐰜 𐰯𐰃𐰼𐰀𐰤𐰾</td>
+        <td class="image"><a href="naslovna/turskirunik.jpg" target="_blank"><img src="naslovna_th/turskirunik.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turskirunik.jpg" target="_blank"><img src="prva_th/turskirunik.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Turski, Denizli dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Turkish, Denizli dialects</a></td>
         <td>Ġüc'cüg Pirens</td>
