--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1670,6 +1670,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turski, istočnotrački dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Eastern Thracian dialects</a></td>
+        <td>Küçük Pirens</td>
+        <td class="image"><a href="naslovna/turskitrakijski.jpg" target="_blank"><img src="naslovna_th/turskitrakijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turskitrakijski.jpg" target="_blank"><img src="prva_th/turskitrakijski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tursko kiparski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkish_Cypriots" target="_blank">Turkish Cypriots</a></td>
         <td>Güçük Prens</td>
