--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -742,6 +742,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Galicijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Galician_language" target="_blank">Galician language</a></td>
+        <td>O Principiño</td>
+        <td class="image"><a href="naslovna/galicijski.jpg" target="_blank"><img src="naslovna_th/galicijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/galicijski.jpg" target="_blank"><img src="prva_th/galicijski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Grčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Greek_language" target="_blank">Greek language</a></td>
         <td>Ο μικρός πρίγκιπας</td>
