--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1088,6 +1088,14 @@
         <td class="number"><span class="auto"></span></td>
         <td>Latinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Latin" target="_blank">Latin language</a></td>
+        <td>Regulus</td>
+        <td class="image"><a href="naslovna/latinski2.jpg" target="_blank"><img src="naslovna_th/latinski2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/latinski2.jpg" target="_blank"><img src="prva_th/latinski2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Latinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Latin" target="_blank">Latin language</a></td>
         <td>Principulus</td>
         <td class="image"><a href="naslovna/latinski.jpg" target="_blank"><img src="naslovna_th/latinski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/latinski.jpg" target="_blank"><img src="prva_th/latinski.jpg" width="50px"></a></td>
