--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Majanski Celtalski</td>
-        <td><a href="https://en.wikipedia.org/wiki/Tzeltal_language" target="_blank">Mayan Tzeltal</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Tzeltal_language" target="_blank">Mayan Tzeltal language</a></td>
         <td>Ch'in yajwalil ek'</td>
         <td class="image"><a href="naslovna/majantzeltal.jpg" target="_blank"><img src="naslovna_th/majantzeltal.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/majantzeltal.jpg" target="_blank"><img src="prva_th/majantzeltal.jpg" width="50px"></a></td>
