--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1726,6 +1726,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Udmurtski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Udmurt_language" target="_blank">Udmurt language</a></td>
+        <td>Пичи принц</td>
+        <td class="image"><a href="naslovna/udmurt.jpg" target="_blank"><img src="naslovna_th/udmurt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/udmurt.jpg" target="_blank"><img src="prva_th/udmurt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Uzbečki jezik ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Uzbek_language" target="_blank">Uzbek language</a></td>
         <td>Кичкина Шаҳзода</td>
