--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -662,6 +662,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Engleski po Pitagorinoj numerologiji</td>
+        <td><a href="https://en.wikipedia.org/wiki/Pythagoras#Numerology" target="_blank">English pythagorean numerology</a></td>
+        <td>15 24 38</td>
+        <td class="image"><a href="naslovna/pitagora.jpg" target="_blank"><img src="naslovna_th/pitagora.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/pitagora.jpg" target="_blank"><img src="prva_th/pitagora.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Esperanto</td>
         <td><a href="https://en.wikipedia.org/wiki/Esperanto" target="_blank">Esperanto</a></td>
         <td>La Eta Princo</td>
