--- a/index.html
+++ b/index.html
@@ -1790,6 +1790,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ukrajinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ukrainian_language" target="_blank">Ukrainian language</a></td>
+        <td>Маленький принц</td>
+        <td class="image"><a href="naslovna/ukrajinski.jpg" target="_blank"><img src="naslovna_th/ukrajinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ukrajinski.jpg" target="_blank"><img src="prva_th/ukrajinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Uzbečki jezik ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Uzbek_language" target="_blank">Uzbek language</a></td>
         <td>Кичкина Шаҳзода</td>
