--- a/index.html
+++ b/index.html
@@ -1230,6 +1230,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Malajalam jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Malayalam" target="_blank">Malayalam language</a></td>
+        <td>കൊച്ചുരാജകുമാരന്</td>
+        <td class="image"><a href="naslovna/malajalam.jpg" target="_blank"><img src="naslovna_th/malajalam.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/malajalam.jpg" target="_blank"><img src="prva_th/malajalam.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Malajski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Malay_language" target="_blank">Malay language</a></td>
         <td>Putera Cilik </td>
