--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1188,6 +1188,14 @@
         <td class="image"><a href="naslovna/makedonski.jpg" target="_blank"><img src="naslovna_th/makedonski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/makedonski.jpg" target="_blank"><img src="prva_th/makedonski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Malajalam jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Malayalam" target="_blank">Malayalam language</a></td>
+        <td>കൊച്ചുരാജകുമാരന്</td>
+        <td class="image"><a href="naslovna/malajalam.jpg" target="_blank"><img src="naslovna_th/malajalam.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/malajalam.jpg" target="_blank"><img src="prva_th/malajalam.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Malajski jezik</td>
