--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -772,6 +772,14 @@
         <td class="image"><a href="naslovna/grcki.jpg" target="_blank"><img src="naslovna_th/grcki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/grcki.jpg" target="_blank"><img src="prva_th/grcki.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Grčki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Greek_language" target="_blank">Greek language</a></td>
+        <td>Ο μικρός πρίγκιπας</td>
+        <td class="image"><a href="naslovna/grcki2.jpg" target="_blank"><img src="naslovna_th/grcki2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/grcki2.jpg" target="_blank"><img src="prva_th/grcki2.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kiparski grčki jezik</td>
