--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -460,6 +460,14 @@
         <td class="image"><a href="naslovna/asturijski.jpg" target="_blank"><img src="naslovna_th/asturijski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/asturijski.jpg" target="_blank"><img src="prva_th/asturijski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Azerski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Azerbaijani_language" target="_blank">Azerbaijani language</a></td>
+        <td>Balaca şahzadə</td>
+        <td class="image"><a href="naslovna/azerski.jpg" target="_blank"><img src="naslovna_th/azerski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/azerski.jpg" target="_blank"><img src="prva_th/azerski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Banatsko bugarski dijalekt</td>
