--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1126,6 +1126,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Laski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Laz_language" target="_blank">Laz language</a></td>
+        <td>Ǯulu Prensina</td>
+        <td class="image"><a href="naslovna/laski.jpg" target="_blank"><img src="naslovna_th/laski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/laski.jpg" target="_blank"><img src="prva_th/laski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Latinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Latin" target="_blank">Latin language</a></td>
         <td>Regulus</td>
