--- a/index.html
+++ b/index.html
@@ -1783,10 +1783,18 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Turski, Denizli dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Turkish, Denizli dialects</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Turkish, Denizli dialect</a></td>
         <td>Ġüc'cüg Pirens</td>
         <td class="image"><a href="naslovna/turski-denizli_dijalekt.jpg" target="_blank"><img src="naslovna_th/turski-denizli_dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/turski-denizli_dijalekt.jpg" target="_blank"><img src="prva_th/turski-denizli_dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Turski, Gazijantep dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Turkish, Gaziantep dialect</a></td>
+        <td>Güccük Pirens</td>
+        <td class="image"><a href="naslovna/turski_gazijantep.jpg" target="_blank"><img src="naslovna_th/turski_gazijantep.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski_gazijantep.jpg" target="_blank"><img src="prva_th/turski_gazijantep.jpg" width="50px"></a></td>
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
