--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1750,6 +1750,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turski, Gazijantep dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Turkish, Gaziantep dialect</a></td>
+        <td>Güccük Pirens</td>
+        <td class="image"><a href="naslovna/turski_gazijantep.jpg" target="_blank"><img src="naslovna_th/turski_gazijantep.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski_gazijantep.jpg" target="_blank"><img src="prva_th/turski_gazijantep.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Turski, istočnotrački dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Eastern Thracian dialects</a></td>
         <td>Küçük Pirens</td>
