--- a/index.html
+++ b/index.html
@@ -1350,6 +1350,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, istočno pomeranski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/East_Pomeranian_dialect" target="_blank">East Pomeranian dialect</a></td>
+        <td>Dai klair prins</td>
+        <td class="image"><a href="naslovna/pomerano.jpg" target="_blank"><img src="naslovna_th/pomerano.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/pomerano.jpg" target="_blank"><img src="prva_th/pomerano.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački jezik, Vogelsberg dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German from Vogelsberg</a></td>
         <td>De klee Prinz</td>
