--- a/index.html
+++ b/index.html
@@ -1630,6 +1630,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Šipibo-Konibo jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Shipibo_language" target="_blank">Shipibo language</a></td>
+        <td>Jatibi ibo bake</td>
+        <td class="image"><a href="naslovna/sipibo.jpg" target="_blank"><img src="naslovna_th/sipibo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sipibo.jpg" target="_blank"><img src="prva_th/sipibo.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Škotski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Scots_language" target="_blank">Scots language</a></td>
         <td>The Prince-Bairnie</td>
