--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1004,6 +1004,14 @@
         <td class="image"><a href="naslovna/kabilski.jpg" target="_blank"><img src="naslovna_th/kabilski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kabilski.jpg" target="_blank"><img src="prva_th/kabilski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Karakalpački jezk</td>
+        <td><a href="https://en.wikipedia.org/wiki/Karakalpak_language" target="_blank">Karakalpak language</a></td>
+        <td>Кишкене шаҳзада</td>
+        <td class="image"><a href="naslovna/karakalpacki.jpg" target="_blank"><img src="naslovna_th/karakalpacki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/karakalpacki.jpg" target="_blank"><img src="prva_th/karakalpacki.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Karenski jezik</td>
