--- a/index.html
+++ b/index.html
@@ -1590,6 +1590,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Sicilijanski jezik - adaptacija za pozorište</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sicilian_language" target="_blank">Sicilian language - Adaptation for the Theater</a></td>
+        <td>U cuntu ru Principini</td>
+        <td class="image"><a href="naslovna/sicilijanski_pozoriste.jpg" target="_blank"><img src="naslovna_th/sicilijanski_pozoriste.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sicilijanski_pozoriste.jpg" target="_blank"><img src="prva_th/sicilijanski_pozoriste.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kolokviajalni singapurski engleski</td>
         <td><a href="https://en.wikipedia.org/wiki/Singlish" target="_blank">Singlish</a></td>
         <td>The Leeter Tunku</td>
