--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -878,6 +878,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Hrvatski, Čakavsko narečje</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chakavian" target="_blank">Chakavian</a></td>
+        <td>Mići Princ</td>
+        <td class="image"><a href="naslovna/hrvatski_cakavski.jpg" target="_blank"><img src="naslovna_th/hrvatski_cakavski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/hrvatski_cakavski.jpg" target="_blank"><img src="prva_th/hrvatski_cakavski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hrvatski kajkavski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kajkavian" target="_blank">Kajkavian</a></td>
         <td>Mali Kralevič</td>
