--- a/index.html
+++ b/index.html
@@ -724,6 +724,14 @@
         <td class="image"><a href="naslovna/esperanto.jpg" target="_blank"><img src="naslovna_th/esperanto.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/esperanto.jpg" target="_blank"><img src="prva_th/esperanto.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Estonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Estonian_language" target="_blank">Estonian language</a></td>
+        <td>Väike prints</td>
+        <td class="image"><a href="naslovna/estonski.jpg" target="_blank"><img src="naslovna_th/estonski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/estonski.jpg" target="_blank"><img src="prva_th/estonski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Finski jezik</td>
