--- a/index.html
+++ b/index.html
@@ -838,6 +838,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Pontski Grčki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Pontic_Greek" target="_blank">Pontic Greek language</a></td>
+        <td>Ο μικρόν ο Πρίγκιπας</td>
+        <td class="image"><a href="naslovna/grcki_pontski.jpg" target="_blank"><img src="naslovna_th/grcki_pontski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/grcki_pontski.jpg" target="_blank"><img src="prva_th/grcki_pontski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kiparski grčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Cypriot_Greek" target="_blank">Cypriot Greek</a></td>
         <td>Ο μικρός πρίγκιπας</td>
