--- a/index.html
+++ b/index.html
@@ -1790,6 +1790,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td<Tokipona jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Toki_Pona" target="_blank">Toki Pona language</a></td>
+        <td></td>
+        <td class="image"><a href="naslovna/tokipona.jpg" target="_blank"><img src="naslovna_th/tokipona.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tokipona.jpg" target="_blank"><img src="prva_th/tokipona.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tonganski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tongan_language" target="_blank">Tongan language</a></td>
         <td>Ko e Ki'i  Pilinisi'</td>
