--- a/index.html
+++ b/index.html
@@ -1382,6 +1382,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Bern dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bernese_German" target="_blank">Bernese German</a></td>
+        <td>Der Chly Prinz</td>
+        <td class="image"><a href="naslovna/nemacki_bern.jpg" target="_blank"><img src="naslovna_th/nemacki_bern.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_bern.jpg" target="_blank"><img src="prva_th/nemacki_bern.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, istočno pomeranski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/East_Pomeranian_dialect" target="_blank">East Pomeranian dialect</a></td>
         <td>Dai klair prins</td>
