--- a/index.html
+++ b/index.html
@@ -612,6 +612,14 @@
         <td class="image"><a href="naslovna/burjatski.jpg" target="_blank"><img src="naslovna_th/burjatski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/burjatski.jpg" target="_blank"><img src="prva_th/burjatski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Burjatski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Buryat_language" target="_blank">Buryat language</a></td>
+        <td>Эдир Хаан Тайжа</td>
+        <td class="image"><a href="naslovna/burjatski_2.jpg" target="_blank"><img src="naslovna_th/burjatski_2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/burjatski_2.jpg" target="_blank"><img src="prva_th/burjatski_2.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Burmanski jezik</td>
