--- a/index.html
+++ b/index.html
@@ -617,8 +617,8 @@
         <td>Burjatski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Buryat_language" target="_blank">Buryat language</a></td>
         <td>Эдир Хаан Тайжа</td>
-        <td class="image"><a href="naslovna/burjatski_2.jpg" target="_blank"><img src="naslovna_th/burjatski_2.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/burjatski_2.jpg" target="_blank"><img src="prva_th/burjatski_2.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/burijat_2.jpg" target="_blank"><img src="naslovna_th/burijat_2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/burijat_2.jpg" target="_blank"><img src="prva_th/burijat_2.jpg" width="50px"></a></td>
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
