--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -572,7 +572,15 @@
         <td class="image"><a href="naslovna/burjatski.jpg" target="_blank"><img src="naslovna_th/burjatski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/burjatski.jpg" target="_blank"><img src="prva_th/burjatski.jpg" width="50px"></a></td>
       </tr>
-       <tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Burjatski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Buryat_language" target="_blank">Buryat language</a></td>
+        <td>Эдир Хаан Тайжа</td>
+        <td class="image"><a href="naslovna/burijat-2.jpg" target="_blank"><img src="naslovna_th/burijat-2.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/burijat-2.jpg" target="_blank"><img src="prva_th/burijat-2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Burmanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Burmese_language" target="_blank">Burmese language</a></td>
