--- a/index.html
+++ b/index.html
@@ -486,6 +486,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Arapski, Standardni jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Modern_Standard_Arabic" target="_blank">Modern Standard Arabic language</a></td>
+        <td class="rtl">الامير الصغير</td>
+        <td class="image"><a href="naslovna/arapski_fusa.jpg" target="_blank"><img src="naslovna_th/arapski_fusa.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/arapski_fusa.jpg" target="_blank"><img src="prva_th/arapski_fusa.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arbereški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arb%C3%ABresh_language" target="_blank">Arbëresh language</a></td>
         <td>Prinxhëpi i vogël</td>
