--- a/index.html
+++ b/index.html
@@ -1860,6 +1860,14 @@
         <td class="image"><a href="naslovna/turski-2.jpg" target="_blank"><img src="naslovna_th/turski-2.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/turski-2.jpg" target="_blank"><img src="prva_th/turski-2.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Turski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_language" target="_blank">Turkish language</a></td>
+        <td>Küçük prens</td>
+        <td class="image"><a href="naslovna/turski-3.jpg" target="_blank"><img src="naslovna_th/turski-3.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski-3.jpg" target="_blank"><img src="prva_th/turski-3.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Turski jezik na staroturkijskom pismu</td>
