--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1822,6 +1822,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_language" target="_blank">Turkish language</a></td>
+        <td>Küçük prens</td>
+        <td class="image"><a href="naslovna/turski-3.jpg" target="_blank"><img src="naslovna_th/turski-3.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turski-3.jpg" target="_blank"><img src="prva_th/turski-3.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Turski jezik na staroturkijskom pismu</td>
         <td><a href="https://en.wikipedia.org/wiki/Old_Turkic_script" target="_blank">Old Turkic script</a></td>
         <td>𐰚𐰇𐰲𐰜 𐰯𐰃𐰼𐰀𐰤𐰾</td>
