--- a/index.html
+++ b/index.html
@@ -990,6 +990,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Islandski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Icelandic_language" target="_blank">Icelandic language</a></td>
+        <td>Litli Prinsinn</td>
+        <td class="image"><a href="naslovna/islandski.jpg" target="_blank"><img src="naslovna_th/islandski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/islandski.jpg" target="_blank"><img src="prva_th/islandski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Italian_language" target="_blank">Italian language</a></td>
         <td>Il Piccolo Principe</td>
