--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Grčki-Kalabrijski dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Calabrian_Greek" target="_blank"Calabrian dialect of Greek</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Calabrian_Greek" target="_blank">Calabrian dialect of Greek</a></td>
         <td>O Principùci</td>
         <td class="image"><a href="naslovna/grcki_kalabrijski-dijalekt.jpg" target="_blank"><img src="naslovna_th/grcki_kalabrijski-dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/grcki_kalabrijski-dijalekt.jpg" target="_blank"><img src="prva_th/grcki_kalabrijski-dijalekt.jpg" width="50px"></a></td>
