--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -814,6 +814,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Grčki-Kalabrijski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Calabrian_Greek" target="_blank">Calabrian dialect of Greek</a></td>
+        <td>O Principùci</td>
+        <td class="image"><a href="naslovna/grcki_kalabrijski-dijalekt.jpg" target="_blank"><img src="naslovna_th/grcki_kalabrijski-dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/grcki_kalabrijski-dijalekt.jpg" target="_blank"><img src="prva_th/grcki_kalabrijski-dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Pontski Grčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Pontic_Greek" target="_blank">Pontic Greek language</a></td>
         <td>Ο μικρόν ο Πρίγκιπας</td>
