--- a/index.html
+++ b/index.html
@@ -1740,9 +1740,17 @@
         <td class="image"><a href="naslovna/spanskimini.jpg" target="_blank"><img src="naslovna_th/spanskimini.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanskimini.jpg" target="_blank"><img src="prva_th/spanskimini.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Španski Andaluzijski Sijera Magine</td>
+        <td><a href="https://en.wikipedia.org/wiki/Andalusian_Spanish" target="_blank">Spanish Andalusian of the Sierra Mágina</a></td>
+        <td>Er Principe Xiqitiyo</td>
+        <td class="image"><a href="naslovna/spanski_andaluzijski-sijeramagine.jpg" target="_blank"><img src="naslovna_th/spanski_andaluzijski-sijeramagine.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski_andaluzijski-sijeramagine.jpg" target="_blank"><img src="prva_th/spanski_andaluzijski-sijeramagine.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Špansko Argentinski jezik</td>
+        <td>Španski Argentinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Rioplatense_Spanish" target="_blank">Rioplatense Spanish</a></td>
         <td>El nene principita</td>
         <td class="image"><a href="naslovna/spansko-argentinski.jpg" target="_blank"><img src="naslovna_th/spansko-argentinski.jpg" width="50px"></a></td>
