--- a/index.html
+++ b/index.html
@@ -1150,6 +1150,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kečua provincije Santjago</td>
+        <td><a href="https://en.wikipedia.org/wiki/Santiague%C3%B1o_Quechua" target="_blank">Santiagueño Quechua</a></td>
+        <td>Principe Huahua</td>
+        <td class="image"><a href="naslovna/kecuasantjago.jpg" target="_blank"><img src="naslovna_th/kecuasantjago.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kecuasantjago.jpg" target="_blank"><img src="prva_th/kecuasantjago.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kineski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chinese_language" target="_blank">Chinese language</a></td>
         <td>小王子</td>
