--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -670,6 +670,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ekstremadurski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Extremaduran_language" target="_blank">Extremaduran language</a></td>
+        <td>El Prencipinu</td>
+        <td class="image"><a href="naslovna/ekstremadurski.jpg" target="_blank"><img src="naslovna_th/ekstremadurski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ekstremadurski.jpg" target="_blank"><img src="prva_th/ekstremadurski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Engleski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language</a></td>
         <td>The Little prince</td>
