--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1798,6 +1798,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tetumski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tetum_language" target="_blank">Tetum language</a></td>
+        <td>Liurai-Oan Ki'ik</td>
+        <td class="image"><a href="naslovna/tetumski.jpg" target="_blank"><img src="naslovna_th/tetumski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tetumski.jpg" target="_blank"><img src="prva_th/tetumski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tibetanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Standard_Tibetan" target="_blank">Standard Tibetan language</a></td>
         <td> རྒྱལ་སྲས་ཆུང་ངུ་།</td>
