--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1294,6 +1294,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Malagaški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Malagasy_language" target="_blank">Malagasy language</a></td>
+        <td>Ilay Andriandahy Kely</td>
+        <td class="image"><a href="naslovna/malagaski.jpg" target="_blank"><img src="naslovna_th/malagaski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/malagaski.jpg" target="_blank"><img src="prva_th/malagaski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Malajalam jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Malayalam" target="_blank">Malayalam language</a></td>
         <td>കൊച്ചുരാജകുമാരന്</td>
