--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -734,6 +734,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Finski savonski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Savonian_dialects" target="_blank">Finnish Savonian Dialect</a></td>
+        <td>Ee mikkään kaaheen iso Ruununperillinen</td>
+        <td class="image"><a href="naslovna/finski_savonski.jpg" target="_blank"><img src="naslovna_th/finski_savonski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/finski_savonski.jpg" target="_blank"><img src="prva_th/finski_savonski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Forro ili saotomanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Forro_Creole" target="_blank">Forro Creole language</a></td>
         <td>Piquina Plinchipi</td>
