--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,14 @@
         <td class="image"><a href="naslovna/italijanskikasino.jpg" target="_blank"><img src="naslovna_th/italijanskikasino.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanskikasino.jpg" target="_blank"><img src="prva_th/italijanskikasino.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Lamecija Terme</td>
+        <td><a href="https://en.wikipedia.org/wiki/Lamezia_Terme" target="_blank">Italian from Lamezia Terme</a></td>
+        <td>'U picculu Principi 'I santu Tidoru</td>
+        <td class="image"><a href="naslovna/italijanski_lamecijaterme.jpg" target="_blank"><img src="naslovna_th/italijanski_lamecijaterme.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_lamecijaterme.jpg" target="_blank"><img src="prva_th/italijanski_lamecijaterme.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
