--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2044,6 +2044,14 @@
         <td class="image"><a href="naslovna/volapik.jpg" target="_blank"><img src="naslovna_th/volapik.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/volapik.jpg" target="_blank"><img src="prva_th/volapik.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Zapotečki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Zapotec_languages" target="_blank">Zapotec language</a></td>
+        <td>Bi'ngǐxh Nazakæ'n</td>
+        <td class="image"><a href="naslovna/zapotecki.jpg" target="_blank"><img src="naslovna_th/zapotecki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/zapotecki.jpg" target="_blank"><img src="prva_th/zapotecki.jpg" width="50px"></a></td>
+      </tr>
 
 <!--
       <tr>
