--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1366,6 +1366,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Međuslovenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Interslavic" target="_blank">Interslavic language</a></td>
+        <td>Maly Princ</td>
+        <td class="image"><a href="naslovna/medjuslovenski.jpg" target="_blank"><img src="naslovna_th/medjuslovenski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/medjuslovenski.jpg" target="_blank"><img src="prva_th/medjuslovenski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
         <td>Ru Prengeparielle</td>
