--- a/index.html
+++ b/index.html
@@ -1756,6 +1756,14 @@
         <td class="image"><a href="naslovna/sundski.jpg" target="_blank"><img src="naslovna_th/sundski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/sundski.jpg" target="_blank"><img src="prva_th/sundski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Suržik jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Surzhyk" target="_blank">Surzhyk language</a></td>
+        <td>MaхонЬкий  прінц</td>
+        <td class="image"><a href="naslovna/surzik.jpg" target="_blank"><img src="naslovna_th/surzik.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/surzik.jpg" target="_blank"><img src="prva_th/surzik.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Svahili jezik</td>
