--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -974,6 +974,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Indonežanski jezik, ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Indonesian_language" target="_blank">Indonesian language, Syrillic</a></td>
+        <td>Си Пангэран Кечил</td>
+        <td class="image"><a href="naslovna/indonezijski_cirilica.jpg" target="_blank"><img src="naslovna_th/indonezijski_cirilica.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/indonezijski_cirilica.jpg" target="_blank"><img src="prva_th/indonezijski_cirilica.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Indonežanski jezik (Van Ophujsenov pravopisni sistem)</td>
         <td><a href="https://en.wikipedia.org/wiki/Van_Ophuijsen_Spelling_System" target="_blank">Indonesian language (Van Ophuijsen Spelling system)</a></td>
         <td>Sang Pangeran Ketjil</td>
