--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1734,6 +1734,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Suržik jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Surzhyk" target="_blank">Surzhyk language</a></td>
+        <td>MaхонЬкий  прінц</td>
+        <td class="image"><a href="naslovna/surzik.jpg" target="_blank"><img src="naslovna_th/surzik.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/surzik.jpg" target="_blank"><img src="prva_th/surzik.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Svahili jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swahili_language" target="_blank">Swahili language</a></td>
         <td>Mwana Mdaga wa Mfalme</td>
