--- a/index.html
+++ b/index.html
@@ -1350,6 +1350,22 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Majanski Celtalski</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tzeltal_language" target="_blank">Mayan Tzeltal language</a></td>
+        <td>Ch'in yajwalil ek'</td>
+        <td class="image"><a href="naslovna/majantzeltal.jpg" target="_blank"><img src="naslovna_th/majantzeltal.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/majantzeltal.jpg" target="_blank"><img src="prva_th/majantzeltal.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Majanski Cocil</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tzotzil_language" target="_blank">Mayan Tzotzil language</a></td>
+        <td>Ch'in Ajvalil</td>
+        <td class="image"><a href="naslovna/majanski_cocil.jpg" target="_blank"><img src="naslovna_th/majanski_cocil.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/majanski_cocil.jpg" target="_blank"><img src="prva_th/majanski_cocil.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Majanski Kakčikel</td>
         <td><a href="https://en.wikipedia.org/wiki/Kaqchikel_language" target="_blank">Mayan Kaqchikel language</a></td>
         <td>Ri ch'uti'ajpop</td>
@@ -1363,14 +1379,6 @@
         <td>Yal ch'in ajwalal</td>
         <td class="image"><a href="naslovna/majanski.jpg" target="_blank"><img src="naslovna_th/majanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/majanski.jpg" target="_blank"><img src="prva_th/majanski.jpg" width="50px"></a></td>
-      </tr>
-      <tr>
-        <td class="number"><span class="auto"></span></td>
-        <td>Majanski Celtalski</td>
-        <td><a href="https://en.wikipedia.org/wiki/Tzeltal_language" target="_blank">Mayan Tzeltal language</a></td>
-        <td>Ch'in yajwalil ek'</td>
-        <td class="image"><a href="naslovna/majantzeltal.jpg" target="_blank"><img src="naslovna_th/majantzeltal.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/majantzeltal.jpg" target="_blank"><img src="prva_th/majantzeltal.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
