--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -422,6 +422,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ajmara jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Aymara_language" target="_blank">Aymara language</a></td>
+        <td>Pirinsipi Wawa</td>
+        <td class="image"><a href="naslovna/aymara.jpg" target="_blank"><img src="naslovna_th/aymara.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/aymara.jpg" target="_blank"><img src="prva_th/aymara.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Albanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian language</a></td>
         <td>Princi i Vogël</td>
