--- a/index.html
+++ b/index.html
@@ -694,6 +694,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Češki Valaški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Moravian_Wallachia" target="_blank">Czech Wallachian language</a></td>
+        <td>Malučký princ</td>
+        <td class="image"><a href="naslovna/ceski_valaski.jpg" target="_blank"><img src="naslovna_th/ceski_valaski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ceski_valaski.jpg" target="_blank"><img src="prva_th/ceski_valaski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Dan ili Jakubinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Dan_language" target="_blank">Dan (Yacouba) language</a></td>
         <td>Gblẅdᴧgbɣ-dhᴧn</td>
