--- a/index.html
+++ b/index.html
@@ -1020,6 +1020,14 @@
         <td class="image"><a href="naslovna/hrvatski-kajkavski.jpg" target="_blank"><img src="naslovna_th/hrvatski-kajkavski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/hrvatski-kajkavski.jpg" target="_blank"><img src="prva_th/hrvatski-kajkavski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Hrvatski, žminjska čakavica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chakavian" target="_blank">Croatian Chakavian</a></td>
+        <td>Minji kraljić</td>
+        <td class="image"><a href="naslovna/hrvatski-zminjska_cakavica.jpg" target="_blank"><img src="naslovna_th/hrvatski-zminjska_cakavica.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/hrvatski-zminjska_cakavica.jpg" target="_blank"><img src="prva_th/hrvatski-zminjska_cakavica.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Indonežanski jezik</td>
