--- a/index.html
+++ b/index.html
@@ -510,6 +510,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Arapski, Tuniski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tunisian_Arabic" target="_blank">Tunisian Arabic language</a></td>
+        <td class="rtl">الأمير الصّغيَّر</td>
+        <td class="image"><a href="naslovna/arapski_tuniski.jpg" target="_blank"><img src="naslovna_th/arapski_tuniski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/arapski_tuniski.jpg" target="_blank"><img src="prva_th/arapski_tuniski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arbereški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arb%C3%ABresh_language" target="_blank">Arbëresh language</a></td>
         <td>Prinxhëpi i vogël</td>
