--- a/index.html
+++ b/index.html
@@ -1356,6 +1356,14 @@
         <td class="image"><a href="naslovna/libanski.jpg" target="_blank"><img src="naslovna_th/libanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/libanski.jpg" target="_blank"><img src="prva_th/libanski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Limonski kreolski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Limonese_Creole" target="_blank">Limonese Creole dialect</a></td>
+        <td>Di Likl Prins</td>
+        <td class="image"><a href="naslovna/limonski_kreolski.jpg" target="_blank"><img src="naslovna_th/limonski_kreolski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/limonski_kreolski.jpg" target="_blank"><img src="prva_th/limonski_kreolski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Litvanski jezik</td>
