--- a/index.html
+++ b/index.html
@@ -1190,6 +1190,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Karakalpački jezk</td>
+        <td><a href="https://en.wikipedia.org/wiki/Karakalpak_language" target="_blank">Karakalpak language</a></td>
+        <td>Kishkene Shahzada </td>
+        <td class="image"><a href="naslovna/karakalpacki_latinica.jpg" target="_blank"><img src="naslovna_th/karakalpacki_latinica.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/karakalpacki_latinica.jpg" target="_blank"><img src="prva_th/karakalpacki_latinica.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Karenski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Karenic_languages" target="_blank">Karenic languages</a></td>
         <td>စီၤပၤအဖိခွါဆံ</td>
